Bug 1662090 - Fix nsMsgPrintEngine. r=mkmelin

To go with https://hg.mozilla.org/mozilla-central/rev/dd85b98c3c80